logre q volvieran a partir ahora toca juntar carrito con los demas